; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_wc_db_update_move.c_update_incoming_add_merge_props.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_wc_db_update_move.c_update_incoming_add_merge_props.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32**, i8*, i32*, i32*, i32*, %struct.TYPE_4__*, i32*, i32*)* @update_incoming_add_merge_props to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @update_incoming_add_merge_props(i32* %0, i32** %1, i8* %2, i32* %3, i32* %4, i32* %5, %struct.TYPE_4__* %6, i32* %7, i32* %8) #0 {
  %10 = alloca i32*, align 8
  %11 = alloca i32**, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca %struct.TYPE_4__*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i32*, align 8
  %20 = alloca i32*, align 8
  %21 = alloca i8*, align 8
  store i32* %0, i32** %10, align 8
  store i32** %1, i32*** %11, align 8
  store i8* %2, i8** %12, align 8
  store i32* %3, i32** %13, align 8
  store i32* %4, i32** %14, align 8
  store i32* %5, i32** %15, align 8
  store %struct.TYPE_4__* %6, %struct.TYPE_4__** %16, align 8
  store i32* %7, i32** %17, align 8
  store i32* %8, i32** %18, align 8
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %16, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i8*, i8** %12, align 8
  %26 = load i32*, i32** %18, align 8
  %27 = call i8* @svn_dirent_join(i32 %24, i8* %25, i32* %26)
  store i8* %27, i8** %21, align 8
  %28 = load i32*, i32** %14, align 8
  %29 = load i32*, i32** %18, align 8
  %30 = call i32 @apr_hash_make(i32* %29)
  %31 = load i32*, i32** %18, align 8
  %32 = call i32 @svn_prop_diffs(i32** %20, i32* %28, i32 %30, i32* %31)
  %33 = call i32 @SVN_ERR(i32 %32)
  %34 = load i32**, i32*** %11, align 8
  %35 = load i32*, i32** %10, align 8
  %36 = load i32*, i32** %15, align 8
  %37 = load i8*, i8** %21, align 8
  %38 = load i32*, i32** %18, align 8
  %39 = call i32 @apr_hash_make(i32* %38)
  %40 = load i32*, i32** %13, align 8
  %41 = load i32*, i32** %14, align 8
  %42 = load i32*, i32** %20, align 8
  %43 = load i32*, i32** %17, align 8
  %44 = load i32*, i32** %18, align 8
  %45 = call i32 @svn_wc__merge_props(i32** %34, i32* %35, i32** %19, i32* %36, i8* %37, i32 %39, i32* %40, i32* %41, i32* %42, i32* %43, i32* %44)
  %46 = call i32 @SVN_ERR(i32 %45)
  %47 = load i32*, i32** %19, align 8
  %48 = call i64 @apr_hash_count(i32* %47)
  %49 = icmp sgt i64 %48, 0
  br i1 %49, label %50, label %59

50:                                               ; preds = %9
  %51 = load %struct.TYPE_4__*, %struct.TYPE_4__** %16, align 8
  %52 = load i8*, i8** %12, align 8
  %53 = load i32*, i32** %19, align 8
  %54 = load i32*, i32** %20, align 8
  %55 = call i32 @svn_wc__has_magic_property(i32* %54)
  %56 = load i32*, i32** %18, align 8
  %57 = call i32 @svn_wc__db_op_set_props_internal(%struct.TYPE_4__* %51, i8* %52, i32* %53, i32 %55, i32* %56)
  %58 = call i32 @SVN_ERR(i32 %57)
  br label %59

59:                                               ; preds = %50, %9
  %60 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %60
}

declare dso_local i8* @svn_dirent_join(i32, i8*, i32*) #1

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_prop_diffs(i32**, i32*, i32, i32*) #1

declare dso_local i32 @apr_hash_make(i32*) #1

declare dso_local i32 @svn_wc__merge_props(i32**, i32*, i32**, i32*, i8*, i32, i32*, i32*, i32*, i32*, i32*) #1

declare dso_local i64 @apr_hash_count(i32*) #1

declare dso_local i32 @svn_wc__db_op_set_props_internal(%struct.TYPE_4__*, i8*, i32*, i32, i32*) #1

declare dso_local i32 @svn_wc__has_magic_property(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
